package org.example.command;

public class EndCommand implements Command {

    public EndCommand() {
    }

    @Override
    public void execute() {
        // TODO: Implementation
    }

    @Override
    public void undo() {
        // TODO: Implementation
    }
}
