package org.example.command;

public class HelpCommand implements Command {

    public HelpCommand() {
    }

    @Override
    public void execute() {
    }

    @Override
    public void undo() {
    }
}
