package org.example.service;

import org.example.command.Command;

public class CommandFactory {

    public CommandFactory() {
    }

    public Command vytvorPrikaz(String nazev, String[] parametry) {
        return null;
    }
}
